CMAKE_MINIMUM_REQUIRED(VERSION 2.8.0)
PROJECT(WooArduinoXl320 CXX)
MESSAGE("[ in] ${CMAKE_CURRENT_LIST_FILE}")

# - Options
OPTION(WOO_XL320_BUILD_APPS "Build test/demo apps for xl320" OFF)
OPTION(WOO_XL320_DEBUG_LOG "Record full debug logs into a file" OFF)

# - Locale includes
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR}/include)

# - CXX
SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

# - Boost
SET(Boost_USE_STATIC_LIBS OFF)
SET(Boost_USE_MULTITHREAD ON)
FIND_PACKAGE(Boost COMPONENTS system thread REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
# To display boost asio debug messages
# ADD_DEFINITIONS(-DBOOST_ASIO_ENABLE_HANDLER_TRACKING)


# - Qt
# FIND_PACKAGE(Qt5 COMPONENTS Core SerialPort REQUIRED)
# SET(CMAKE_AUTOMOC ON)
# ADD_DEFINITIONS(
#     ${Qt5Core_DEFINITIONS}
#     ${Qt5SerialPort_DEFINITIONS}
#)
#INCLUDE_DIRECTORIES(
#    ${Qt5Core_INCLUDE_DIRS}
#    ${Qt5SerialPort_INCLUDE_DIRS}
#    )

# - 
ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(app)

MESSAGE("[out] ${CMAKE_CURRENT_LIST_FILE}")
