CMAKE_MINIMUM_REQUIRED(VERSION 2.8.0)
PROJECT(WooArduinoXl320 CXX)
MESSAGE("[ in] ${CMAKE_CURRENT_LIST_FILE}")

# - Options
OPTION(WOO_XL320_BUILD_APPS "Build test/demo apps for xl320" OFF)
OPTION(WOO_XL320_DEBUG_LOG "Record full debug logs into a file" OFF)

# - Enable debug logs
IF(WOO_XL320_DEBUG_LOG)
	ADD_DEFINITIONS(-DWOO_XL320_DEBUG_LOG)
ENDIF()

# - Locale includes
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR}/include)

# - CXX
SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

# - Boost
SET(Boost_USE_STATIC_LIBS OFF)
SET(Boost_USE_MULTITHREAD ON)
FIND_PACKAGE(Boost COMPONENTS system thread REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
# To display boost asio debug messages
# ADD_DEFINITIONS(-DBOOST_ASIO_ENABLE_HANDLER_TRACKING)

# - Build libs
ADD_SUBDIRECTORY(lib)

# - Build apps if required
IF(WOO_XL320_BUILD_APPS)
    ADD_SUBDIRECTORY(app)
ENDIF()

MESSAGE("[out] ${CMAKE_CURRENT_LIST_FILE}")
